devops/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: railcloud
  labels:
    app.kubernetes.io/part-of: railway-ticket-booking-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
